# lvgl_ui

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  LVGL.Simulator.sln  README.md
Application/: Application.c  Application.h
Application/enum/: enum.h
Application/example/first/interface/: IFirstModel.h  IFirstWindow.h
Application/example/first/model/: FirstModel.c  FirstModel.h
Application/example/first/presenter/: FirstPresenter.c  FirstPresenter.h
Application/example/first/view/: FirstWindow.c  FirstWindow.h
Application/fonts/: SourceHanSansAscii_Bold_24.c  SourceHanSansAscii_Bold_30.c  SourceHanSansCN_Bold_12.c  SourceHanSansCN_Bold_16.c  doc.md  fonts.h
Application/generic/: enum.h  macro.h  struct.h
Application/interface/: EventController.h  IEventController.h  IEventsManager.h  IModelController.h  IModelsManager.h  IWindowController.h  IWindowsManager.h  WindowController.h  WindowsController.h  WindowsManager.c  WindowsManager.h  enum.h  struct.h
Application/manager/: EventsManager.c  EventsManager.h  ModelsManager.c  ModelsManager.h  WindowsManager.c  WindowsManager.h
Application/presenter/: FirstPresenter.c  FirstPresenter.h  SecondPresenter.c  SecondPresenter.h  ThirdPresenter.c  ThirdPresenter.h
Application/tools/: StringTools.c  StringTools.h
Application/view/: FirstWindow.c  FirstWindow.h  KeyBoard.c  KeyBoard.h  SecondWindow.c  SecondWindow.h  ThirdWindow.c  ThirdWindow.h
LVGL.Simulator/: LVGL.Simulator.cpp  LVGL.Simulator.vcxproj  LVGL.Simulator.vcxproj.filters  lv_conf.h
doc/: doc.md
(+21 files in other folders)
